# Wolf

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt
main/include/: coreXY.h  define.h  detectionPiece.h  electroaimant.h  limitSwitchX.h  limitSwitchY.h  main.h  moteurGauche.h  piloteDetectionPiece.h  piloteElectroaimant.h  piloteLimitSwitchX.h  piloteLimitSwitchY.h  piloteMoteur1.h  piloteMoteur2.h  piloteMoteurDroit.h  piloteMoteurGauche.h  piloteUart.h  piloteUart2.h  taskCalibration.h  taskDeplacementPiece.h  taskGestionControleur1.h  taskRxUart.h  taskTxUart.h
main/src/: main.c
main/src/Interface/: coreXY.c  detectionPiece.c  electroaimant.c  limitSwitchX.c  limitSwitchY.c  moteurGauche.c
main/src/Pilote/: piloteDetectionPiece.c  piloteElectroaimant.c  piloteLimitSwitchX.c  piloteLimitSwitchY.c  piloteMoteur1.c  piloteMoteur2.c  piloteMoteurDroit.c  piloteMoteurGauche.c  piloteUart.c  piloteUart2.c
main/src/Tasks/: taskCalibration.c  taskDeplacementPiece.c  taskGestionControleur1.c  taskRxUart.c  taskTxUart.c
