idf_component_register(SRCS "src/main.c"
                            "src/Pilote/piloteDetectionPiece.c"
                            "src/Pilote/piloteElectroaimant.c"
                            "src/Pilote/piloteMoteur1.c"
                            "src/Pilote/piloteMoteur2.c"
                            "src/Pilote/piloteLimitSwitchX.c"
                            "src/Pilote/piloteLimitSwitchY.c"
                            "src/Pilote/piloteUart.c"
                            "src/Interface/detectionPiece.c"
                    INCLUDE_DIRS "." "./include")
