idf_component_register(SRCS "src/main.c"
                            "src/Pilote/piloteDetectionPiece.c"
                            "src/Pilote/piloteElectroaimant.c"
                            "src/Pilote/piloteMoteurGauche.c"
                            "src/Pilote/piloteMoteurDroit.c"
                            "src/Pilote/piloteLimitSwitchX.c"
                            "src/Pilote/piloteLimitSwitchY.c"
                            "src/Pilote/piloteUart2.c"
                            "src/Interface/limitSwitchX.c"
                            "src/Interface/limitSwitchY.c"
                            "src/Interface/electroaimant.c"
                            "src/Interface/detectionPiece.c"
                            "src/Interface/CoreXY.c"
                            "src/Tasks/taskCalibration.c"
                            "src/Tasks/taskDeplacementPiece.c"
                            "src/Tasks/taskGestionControleur1.c"
                            "src/Tasks/taskRxUart.c"
                            "src/Tasks/taskTxUart.c"
                    INCLUDE_DIRS "." "include")
